5.0/_sources/parametertools.rst.txt
.. |Constants| replace:: :class:`~hydpy.core.parametertools.Constants`
.. |Date| replace:: :class:`~hydpy.core.timetools.Date`
.. |ELSModel| replace:: :class:`~hydpy.core.modeltools.ELSModel`
.. |Element| replace:: :class:`~hydpy.core.devicetools.Element`
.. |False| replace:: :const:`False`
.. |FastAccessParameter| replace:: :class:`~hydpy.core.parametertools.FastAccessParameter`
.. |FixedParameter.restore| replace:: :func:`~hydpy.core.parametertools.FixedParameter.restore`
.. |FixedParameter| replace:: :class:`~hydpy.core.parametertools.FixedParameter`
.. |HydPy.save_controls| replace:: :func:`~hydpy.core.hydpytools.HydPy.save_controls`
.. |HydPy| replace:: :class:`~hydpy.core.hydpytools.HydPy`
.. |IndexMask| replace:: :class:`~hydpy.core.masktools.IndexMask`
.. |Indexer.dayofyear| replace:: :const:`~hydpy.core.indextools.Indexer.dayofyear`
.. |Indexer.monthofyear| replace:: :const:`~hydpy.core.indextools.Indexer.monthofyear`
.. |Indexer.standardclocktime| replace:: :const:`~hydpy.core.indextools.Indexer.standardclocktime`
.. |Indexer.timeofyear| replace:: :const:`~hydpy.core.indextools.Indexer.timeofyear`
.. |Indexer| replace:: :class:`~hydpy.core.indextools.Indexer`
.. |KeywordArguments.add| replace:: :func:`~hydpy.core.parametertools.KeywordArguments.add`
.. |KeywordArguments.extend| replace:: :func:`~hydpy.core.parametertools.KeywordArguments.extend`
.. |KeywordArguments.subset_of| replace:: :func:`~hydpy.core.parametertools.KeywordArguments.subset_of`
.. |KeywordArguments.valid| replace:: :attr:`~hydpy.core.parametertools.KeywordArguments.valid`
.. |KeywordArgumentsError| replace:: :class:`~hydpy.core.parametertools.KeywordArgumentsError`
.. |KeywordArguments| replace:: :class:`~hydpy.core.parametertools.KeywordArguments`
.. |KeywordParameter1D| replace:: :class:`~hydpy.core.parametertools.KeywordParameter1D`
.. |KeywordParameter2D| replace:: :class:`~hydpy.core.parametertools.KeywordParameter2D`
.. |Keyword| replace:: :class:`~hydpy.core.parametertools.Keyword`
.. |LeftRightParameter| replace:: :class:`~hydpy.core.parametertools.LeftRightParameter`
.. |MonthParameter| replace:: :class:`~hydpy.core.parametertools.MonthParameter`
.. |NameParameter| replace:: :class:`~hydpy.core.parametertools.NameParameter`
.. |None| replace:: :const:`None`
.. |NotImplementedError| replace:: :class:`NotImplementedError`
.. |Options.usedefaultvalues| replace:: :const:`~hydpy.core.optiontools.Options.usedefaultvalues`
.. |Options.utclongitude| replace:: :const:`~hydpy.core.optiontools.Options.utclongitude`
.. |Parameter.TIME| replace:: :attr:`~hydpy.core.parametertools.Parameter.TIME`
.. |Parameter.apply_timefactor| replace:: :func:`~hydpy.core.parametertools.Parameter.apply_timefactor`
.. |Parameter.compress_repr| replace:: :func:`~hydpy.core.parametertools.Parameter.compress_repr`
.. |Parameter.get_timefactor| replace:: :func:`~hydpy.core.parametertools.Parameter.get_timefactor`
.. |Parameter.initinfo| replace:: :const:`~hydpy.core.parametertools.Parameter.initinfo`
.. |Parameter.keywordarguments| replace:: :const:`~hydpy.core.parametertools.Parameter.keywordarguments`
.. |Parameter.subvars| replace:: :attr:`~hydpy.core.parametertools.Parameter.subvars`
.. |Parameter.update| replace:: :func:`~hydpy.core.parametertools.Parameter.update`
.. |Parameters.save_controls| replace:: :func:`~hydpy.core.parametertools.Parameters.save_controls`
.. |Parameters.verify| replace:: :func:`~hydpy.core.parametertools.Parameters.verify`
.. |Parameters| replace:: :class:`~hydpy.core.parametertools.Parameters`
.. |Parameter| replace:: :class:`~hydpy.core.parametertools.Parameter`
.. |RuntimeError| replace:: :class:`RuntimeError`
.. |SeasonalParameter.interp| replace:: :func:`~hydpy.core.parametertools.SeasonalParameter.interp`
.. |SeasonalParameter.refresh| replace:: :func:`~hydpy.core.parametertools.SeasonalParameter.refresh`
.. |SeasonalParameter.shape| replace:: :const:`~hydpy.core.parametertools.SeasonalParameter.shape`
.. |SeasonalParameter| replace:: :class:`~hydpy.core.parametertools.SeasonalParameter`
.. |SolverParameter.alternative_initvalue| replace:: :const:`~hydpy.core.parametertools.SolverParameter.alternative_initvalue`
.. |SolverParameter.modify_init| replace:: :func:`~hydpy.core.parametertools.SolverParameter.modify_init`
.. |SolverParameter.update| replace:: :func:`~hydpy.core.parametertools.SolverParameter.update`
.. |SolverParameter| replace:: :class:`~hydpy.core.parametertools.SolverParameter`
.. |SubParameters| replace:: :class:`~hydpy.core.parametertools.SubParameters`
.. |TOY| replace:: :class:`~hydpy.core.timetools.TOY`
.. |Timegrids| replace:: :class:`~hydpy.core.timetools.Timegrids`
.. |True| replace:: :const:`True`
.. |UTCLongitudeParameter.update| replace:: :func:`~hydpy.core.parametertools.UTCLongitudeParameter.update`
.. |ValueError| replace:: :class:`ValueError`
.. |Variable.SPAN| replace:: :attr:`~hydpy.core.variabletools.Variable.SPAN`
.. |Variable.TYPE| replace:: :attr:`~hydpy.core.variabletools.Variable.TYPE`
.. |Variable.values| replace:: :const:`~hydpy.core.variabletools.Variable.values`
.. |Variable.value| replace:: :const:`~hydpy.core.variabletools.Variable.value`
.. |Variable.verify| replace:: :func:`~hydpy.core.variabletools.Variable.verify`
.. |Variable| replace:: :class:`~hydpy.core.variabletools.Variable`
.. |ZipParameter.keywordarguments| replace:: :const:`~hydpy.core.parametertools.ZipParameter.keywordarguments`
.. |ZipParameter| replace:: :class:`~hydpy.core.parametertools.ZipParameter`
.. |dam| replace:: :mod:`~hydpy.models.dam`
.. |delattr| replace:: :func:`delattr`
.. |float| replace:: :class:`float`
.. |get_controlfileheader| replace:: :func:`~hydpy.core.parametertools.get_controlfileheader`
.. |getattr| replace:: :func:`getattr`
.. |hland_v1| replace:: :mod:`~hydpy.models.hland_v1`
.. |int| replace:: :class:`int`
.. |len| replace:: :func:`len`
.. |llake| replace:: :mod:`~hydpy.models.llake`
.. |lland_v1| replace:: :mod:`~hydpy.models.lland_v1`
.. |lland| replace:: :mod:`~hydpy.models.lland`
.. |meteo_v001| replace:: :mod:`~hydpy.models.meteo_v001`
.. |parameterstep| replace:: :func:`~hydpy.core.importtools.parameterstep`
.. |parametertools| replace:: :mod:`~hydpy.core.parametertools`
.. |pub| replace:: :mod:`~hydpy.pub`
.. |trim_kwarg| replace:: :func:`~hydpy.core.parametertools.trim_kwarg`
.. |trim| replace:: :func:`~hydpy.core.variabletools.trim`
.. |tuple| replace:: :class:`tuple`
.. |variabletools| replace:: :mod:`~hydpy.core.variabletools`
.. |hland_control.IcMax| replace:: :class:`~hydpy.models.hland.hland_control.IcMax`
.. |hland_parameters.ParameterComplete| replace:: :class:`~hydpy.models.hland.hland_parameters.ParameterComplete`
.. |llake_control.Q| replace:: :class:`~hydpy.models.llake.llake_control.Q`
.. |llake_control.W| replace:: :class:`~hydpy.models.llake.llake_control.W`
.. |lland_constants.ACKER| replace:: :const:`~hydpy.models.lland.lland_constants.ACKER`
.. |lland_constants.LAUBW| replace:: :const:`~hydpy.models.lland.lland_constants.LAUBW`
.. |lland_constants.WASSER| replace:: :const:`~hydpy.models.lland.lland_constants.WASSER`
.. |lland_control.LAI| replace:: :class:`~hydpy.models.lland.lland_control.LAI`
.. |lland_control.Lnk| replace:: :class:`~hydpy.models.lland.lland_control.Lnk`
.. |lland_control.NHRU| replace:: :class:`~hydpy.models.lland.lland_control.NHRU`
.. |lland_control.TRefT| replace:: :class:`~hydpy.models.lland.lland_control.TRefT`
.. |lland_control.WG2Z| replace:: :class:`~hydpy.models.lland.lland_control.WG2Z`
.. |lland_fixed.LW| replace:: :class:`~hydpy.models.lland.lland_fixed.LW`
.. |lland_parameters.LanduseMonthParameter| replace:: :class:`~hydpy.models.lland.lland_parameters.LanduseMonthParameter`
.. |meteo_control.Latitude| replace:: :class:`~hydpy.models.meteo.meteo_control.Latitude`
.. |meteo_control.Longitude| replace:: :class:`~hydpy.models.meteo.meteo_control.Longitude`
.. |musk_control.NmbSegments| replace:: :class:`~hydpy.models.musk.musk_control.NmbSegments`

.. _parametertools:

parametertools
==============

.. automodule:: hydpy.core.parametertools
    :members:
    :show-inheritance:
    :exclude-members: Self, Reversible, Generic, Sized, Awaitable, IntVar, clear_overloads, TypeAlias, Sequence, Hashable, SUBMETHODS, SupportsAbs, AnyStr, assert_never, reveal_type, CLASSES, REQUIREDSEQUENCES, ItemsView, Union, SupportsFloat, get_overloads, get_origin, OUTLET_METHODS, NoReturn, no_type_check, Type, Final, PART_ODE_METHODS, RECEIVER_METHODS, Tuple, AbstractSet, ByteString, MappingView, subpars, MutableSequence, MutableSet, SupportsRound, CONTROLPARAMETERS, INLET_METHODS, get_protocol_members, SOLVERSEQUENCES, FrozenSet, no_type_check_decorator, fastaccess_old, Mapping, FIXEDPARAMETERS, seqs, KeysView, SUBMODELS, Protocol, SupportsComplex, SENDER_METHODS, ContextManager, deprecated, SupportsBytes, get_original_bases, Iterator, is_protocol, TypeGuard, DefaultDict, LiteralString, Required, TextIO, TYPE_CHECKING, AsyncContextManager, fastaccess_new, FULL_ODE_METHODS, SOLVERPARAMETERS, BinaryIO, fastaccess, runtime, IO, Text, TypeVarTuple, ValuesView, AsyncIterable, Generator, Optional, assert_type, Literal, dataclass_transform, subvars, pars, get_args, ParamSpec, Annotated, cast, final, subseqs, ClassVar, Any, Unpack, Coroutine, is_typeddict, Counter, UPDATEDSEQUENCES, Callable, Dict, NamedTuple, overload, OrderedDict, Set, ADD_METHODS, Collection, Pattern, List, get_type_hints, Concatenate, ParamSpecKwargs, DERIVEDPARAMETERS, AsyncGenerator, override, Container, RUN_METHODS, NotRequired, NewType, RESULTSEQUENCES, SupportsInt, Buffer, Iterable, TypeVar, SupportsIndex, MutableMapping, ChainMap, ForwardRef, TypeAliasType, AsyncIterator, Never, ParamSpecArgs, Match, Deque, TypedDict, runtime_checkable
